[tool.poetry]
name = "rasa-sample"
version = "0.1.0"
description = ""
authors = ["David Torres <davidtorres@microsoft.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.10"
debugpy = "^1.8.14"

[tool.poetry.dependencies.rasa]
path = "../rasa"
develop = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
